// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > checkpoint-only 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ First question - THREAD (RAW) 7/7                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Checkpoint-only view enabled • Checkpoint-only
Legend: 👤 User | 🤖 Assistant | 🔧 tool call | 🧰 tool result | ⚙️ system | ◆ checkpoint
Mode: READING (t to focus timeline)
   ○ - Start                                                              Timeline [READ] P:TOP…
                                                                          CP 2 | Files 2 | Msgs…
   ◆ - Checkpoint Alpha                                                   Preview
   📝 Summary <time>                                                  📂 File Snapshot:
 | Checkpoint Alpha                                                       Pos 7/7 (100%)
                                                                          Stage 3/3: Snapshot (…
 ▶ ◆ - Snapshot (2 files)                                            . │•
 ▶ 📂 File Snapshot <time>                                         │
 >                                                                     │
   ↳ Files (2): src/index.ts, README.md                              . │•
                                                                       │
                                                                       │
                                                                     . │•
                                                                       │
                                                                       │
                                                                     ◆ │◆ Checkpoint Alpha
                                                                       │
                                                                     . │•
                                                                       │
                                                                       │
                                                                     . │•
                                                                       │
                                                                       │
                                                                     ◆ ┃● Snapshot (2 files)
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:scroll | j/k:next/prev msg | u/U:user msgs | r:raw | v:view | t:focus timeline | o:preview pos│
│ | p:checkpoints | c:collapse | [ ]:checkpoint | E/P:export stage/all | ESC:back                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > conversation-list 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ragame - 1 conversations                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
ℹ️  Selected project: ragame
▶ [<time>] First question (4 msgs) 👤→🤖
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:nav | ↵:view | a:analytics | s:search | e:export | ESC:back | h:help                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > message-detail-single 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ First question - CLEAN 4/4                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
ℹ️  Viewing conversation: First question
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timeline: 7 entries | 👤=User 🤖=AI ░=System                                                     │
│                                                                                                  │
│                                                                                                  │
│ ░░░░░░░░░░░░░░▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░     │
│ Position: 4/7 | 📝 Summary                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
🤖 Assistant [<time>]:
  Second answer
  Model: test-model
  Tokens: 0 in, 0 out













┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:scroll | j/k:next/prev msg | u/U:user msgs | r:raw | v:thread | [ ]:checkpoint | E/P:export   │
│stage/all | ESC:back                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > project-list 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Show Me The Talk - Project Selection                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
  Select a project to view conversations:
▶ 📁 ragame (1 conversations)
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓/jk:navigate | ↵:select | q:quit | h:help                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > thread-view 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ First question - THREAD (CLEAN) 4/4                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Switched to thread view
Legend: 👤 User | 🤖 Assistant | 🔧 tool call | 🧰 tool result | ⚙️ system | ◆ checkpoint
Mode: READING (t to focus timeline)
 ▶ ○ - Start                                                              Timeline [READ] P:TOP…
   👤 User <time>                                                     CP 2 | Files 2 | Msgs…
 | First question                                                         Preview
                                                                          🤖 Assistant: Second
   🤖 Assistant <time>                                                Pos 4/4 (100%)
 | First answer                                                           Stage 3/3: Snapshot (…
   ↳ Model: test-model                                               . │•
   ↳ Tokens: 0 in, 0 out                                               │
                                                                       │
   👤 User <time>                                                . │•
 | Second question                                                     │
                                                                       │
 ▶ 🤖 Assistant <time>                                           . │•
 > Second answer                                                       │
   ↳ Model: test-model                                                 │
   ↳ Tokens: 0 in, 0 out                                             ◆ │◆ Checkpoint Alpha
                                                                       │
                                                                     . │•
                                                                       │
                                                                       │
                                                                     . │•
                                                                       │
                                                                       │
                                                                     ◆ ┃● Snapshot (2 files)
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:scroll | j/k:next/prev msg | u/U:user msgs | r:raw | v:view | t:focus timeline | o:preview pos│
│ | p:checkpoints | c:collapse | [ ]:checkpoint | E/P:export stage/all | ESC:back                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > thread-view-raw 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ First question - THREAD (RAW) 4/7                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Switched to raw transcript view
Legend: 👤 User | 🤖 Assistant | 🔧 tool call | 🧰 tool result | ⚙️ system | ◆ checkpoint
Mode: READING (t to focus timeline)
   ○ - Start                                                              Timeline [READ] P:TOP…
   ⚙️ System <time>                                                   CP 2 | Files 2 | Msgs…
 | System start                                                           Preview
                                                                          📝 Summary: Checkpoint
   👤 User <time>                                                     Pos 4/7 (57%)
 | First question                                                         Stage 2/3: Checkpoint…
                                                                     . │•
   🤖 Assistant <time>                                             │
 | First answer                                                        │
                                                                     . │•
 ▶ ◆ - Checkpoint Alpha                                                │
 ▶ 📝 Summary <time>                                               │
 > Checkpoint Alpha                                                  . │•
                                                                       │
   👤 User <time>                                                  │
 | Second question                                                   ◆ ┃● Checkpoint Alpha
                                                                       │
   🤖 Assistant <time>                                           . ║•
 | Second answer                                                       │
                                                                       │
   ◆ - Snapshot (2 files)                                            . ║•
   📂 File Snapshot <time>                                         │
 |                                                                     │
 [1-23 of 25 lines]                                                  ◆ │◆ Snapshot (2 files)
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:scroll | j/k:next/prev msg | u/U:user msgs | r:raw | v:view | t:focus timeline | o:preview pos│
│ | p:checkpoints | c:collapse | [ ]:checkpoint | E/P:export stage/all | ESC:back                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > timeline-focus 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ First question - THREAD (RAW) 4/7                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Timeline focus on (j/k or ↑/↓ to move, Enter to jump) • Focus: Checkpoint Alpha
Legend: 👤 User | 🤖 Assistant | 🔧 tool call | 🧰 tool result | ⚙️ system | ◆ checkpoint
Mode: TIMELINE NAV (j/k move, Enter jump, t exit)
   ○ - Start                                                              Timeline [NAV] P:TOP …
   ⚙️ System <time>                                                   CP 2 | Files 2 | Msgs…
 | System start                                                           Preview
                                                                          📝 Summary: Checkpoint
   👤 User <time>                                                     Pos 4/7 (57%)
 | First question                                                         Stage 2/3: Checkpoint…
                                                                     . │•
   🤖 Assistant <time>                                             │
 | First answer                                                        │
                                                                     . │•
 ▶ ◆ - Checkpoint Alpha                                                │
 ▶ 📝 Summary <time>                                               │
 > Checkpoint Alpha                                                  . │•
                                                                       │
   👤 User <time>                                                  │
 | Second question                                                  ▶◆ ┃● Checkpoint Alpha
                                                                       │
   🤖 Assistant <time>                                           . ║•
 | Second answer                                                       │
                                                                       │
   ◆ - Snapshot (2 files)                                            . ║•
   📂 File Snapshot <time>                                         │
 |                                                                     │
 [1-23 of 25 lines]                                                  ◆ │◆ Snapshot (2 files)
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:scroll | j/k:next/prev msg | u/U:user msgs | r:raw | v:view | t:focus timeline | o:preview pos│
│ | p:checkpoints | c:collapse | [ ]:checkpoint | E/P:export stage/all | ESC:back                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > timeline-jump 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ First question - THREAD (RAW) 7/7                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Jumped to Snapshot (2 files) • Focus: Snapshot (2 files)
Legend: 👤 User | 🤖 Assistant | 🔧 tool call | 🧰 tool result | ⚙️ system | ◆ checkpoint
Mode: TIMELINE NAV (j/k move, Enter jump, t exit)
   ○ - Start                                                              Timeline [NAV] P:TOP …
   ⚙️ System <time>                                                   CP 2 | Files 2 | Msgs…
 | System start                                                           Preview
                                                                          📂 File Snapshot:
   👤 User <time>                                                     Pos 7/7 (100%)
 | First question                                                         Stage 3/3: Snapshot (…
                                                                     . │•
   🤖 Assistant <time>                                             │
 | First answer                                                        │
                                                                     . │•
   ◆ - Checkpoint Alpha                                                │
   📝 Summary <time>                                               │
 | Checkpoint Alpha                                                  . │•
                                                                       │
   👤 User <time>                                                  │
 | Second question                                                   ◆ │◆ Checkpoint Alpha
                                                                       │
   🤖 Assistant <time>                                           . │•
 | Second answer                                                       │
                                                                       │
 ▶ ◆ - Snapshot (2 files)                                            . │•
 ▶ 📂 File Snapshot <time>                                         │
 >                                                                     │
 [1-23 of 25 lines]                                                 ▶◆ ┃● Snapshot (2 files)
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:scroll | j/k:next/prev msg | u/U:user msgs | r:raw | v:view | t:focus timeline | o:preview pos│
│ | p:checkpoints | c:collapse | [ ]:checkpoint | E/P:export stage/all | ESC:back                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ComprehensiveInkTUI interactions (snapshot regression) > renders project → conversation → thread flow with timeline interactions > timeline-selection 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ First question - THREAD (RAW) 4/7                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Timeline focus on (j/k or ↑/↓ to move, Enter to jump) • Focus: Snapshot (2 files)
Legend: 👤 User | 🤖 Assistant | 🔧 tool call | 🧰 tool result | ⚙️ system | ◆ checkpoint
Mode: TIMELINE NAV (j/k move, Enter jump, t exit)
   ○ - Start                                                              Timeline [NAV] P:TOP …
   ⚙️ System <time>                                                   CP 2 | Files 2 | Msgs…
 | System start                                                           Preview
                                                                          📂 File Snapshot:
   👤 User <time>                                                     Pos 7/7 (100%)
 | First question                                                         Stage 3/3: Snapshot (…
                                                                     . │•
   🤖 Assistant <time>                                             │
 | First answer                                                        │
                                                                     . │•
 ▶ ◆ - Checkpoint Alpha                                                │
 ▶ 📝 Summary <time>                                               │
 > Checkpoint Alpha                                                  . │•
                                                                       │
   👤 User <time>                                                  │
 | Second question                                                   ◆ │◆ Checkpoint Alpha
                                                                       │
   🤖 Assistant <time>                                           . │•
 | Second answer                                                       │
                                                                       │
   ◆ - Snapshot (2 files)                                            . │•
   📂 File Snapshot <time>                                         │
 |                                                                     │
 [1-23 of 25 lines]                                                 ▶◆ ┃● Snapshot (2 files)
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑↓:scroll | j/k:next/prev msg | u/U:user msgs | r:raw | v:view | t:focus timeline | o:preview pos│
│ | p:checkpoints | c:collapse | [ ]:checkpoint | E/P:export stage/all | ESC:back                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
